2003-05-06  Carlos Perelló Marín <carlos@gnome.org>

	* configure.in (ALL_LINGUAS): Changed es_ES with es.

2003-05-06  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Added Edit -> Deselect All

	* src/sj-main.c:
	Implement Deselect All, generalising Select All. Closes #112320.

2003-05-06  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	(on_progress_cancel_clicked): Set the extracting state field to
	false. Noticed by Ryan Boren <ryan@boren.nu>.
	(on_extract_activate): Re-arrange the freeing of the pending list
	so that restarting extracts after cancelling works. Bug noticed by
	Ryan Boren.

	* src/sj-musicbrainz.[ch]:
	Add functions to set the proxy host and port.

	* src/sound-juicer.h:
	Define the GConf keys for the system HTTP proxy and port.
	
	* src/sj-main.c:
	Listen to the system HTTP proxy and set the MusicBrainz
	proxy. Patch from Kai Willadsen <kaiw@itee.uq.edu.au>.

	* configure.in:
	* po/es_ES.po:
	Added Spanish translation, by Kike <krm@futurnet.es>

	* NEWS:
	* README:
	* TODO:
	Updated.

2003-05-04  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Add an option to carry on if no CD-ROMs were found. The program is
	useless but it means I can code on my laptop whilst everyone else
	gets more error checks.

	* src/sj-main.c:
	Display a dialog if there are no CD-ROMs found.

	* src/sj-prefs.c:
	Store the file and path patterns in structures.  Listen to the
	Strip Special, path and file pattern gconf keys and update the
	UI. Original patches from Ryan Boren <ryan@boren.nu>, modified by
	me.

2003-05-03  Ross Burton  <ross@burtonini.com>

	* src/sound-juicer.h:
	Name the column numbers enum.

	* src/sj-main.c:
	Allow the title/artist fields to be edited.
	(main) Listen to the file and path pattern GConf keys. Patch from Ryan
	Boren <ryan@boren.nu>.
	(duration_cell_data_cb) Fix memory leaks and stupid use of GValue.

	* src/sj-structures.c:
	Make the fields non-const so I can edit them.
