@@ -1,3 +1,11 @@
+2003-05-07  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	Make the columns resizable.
+
+	* data/sound-juicer.glade:
+	Remove the "CD Info" heading.
+
 2003-05-06  Carlos Perelló Marín <carlos@gnome.org>
 
 	* configure.in (ALL_LINGUAS): Changed es_ES with es.
